fixing model
